--- a/.stylua.toml
+++ b/.stylua.toml
@@ -4,7 +4,7 @@ indent_type = 'Tabs'
 indent_width = 2
 quote_style = 'ForceSingle'
 call_parentheses = 'Always'
-collapse_simple_statement = 'Always'
+collapse_simple_statement = 'Never'
 
 [sort_requires]
 enabled = false
